Enabled headless build (Not LV2)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@
 #   You should have received a copy of the GNU General Public License
 #   along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-# Modified January 2019
+# Modified February 2019
 
 project (Yoshimi)
 cmake_minimum_required (VERSION 3.0)
@@ -86,6 +86,8 @@ option (BuildForNEON "Build for ARM Cortex A9 system" OFF)
 option (BuildForThisCPU "Build for presently running system" OFF)
 option (BuildForDebug "Debug build without optimisation. Enable gdb debugging support" OFF)
 
+option (BuildWithFLTK "Build with FLTK GUI" ON)
+
 #option to build lv2 plugin
 option (LV2Plugin "Build yoshimi lv2 plugin interface" ON)
 
@@ -129,6 +131,10 @@ set (BuildOptionsDebug
     "-O0 -g3 -ggdb -Wpointer-arith -Wpedantic -Wextra" CACHE STRING "Compile without optimisation and with debug information")
 set (BuildOptionsRelease
     "-O3" CACHE STRING "Compile with optimisation for Release builds")
+
+if (BuildWithFLTK)
+    add_definitions (-DGUI_FLTK)
+endif(BuildWithFLTK)
 
 find_package (PkgConfig REQUIRED)
 if (PKG_CONFIG_FOUND)
@@ -241,17 +247,18 @@ else (LIBCAIRO_FOUND)
     message (FATAL_ERROR "libcairo required but not found")
 endif (LIBCAIRO_FOUND)
 
-
 # fltk
-find_package (FLTK REQUIRED)
-if (FLTK_FOUND)
-    message (STATUS "Found FLTK")
-else (FLTK_FOUND)
-    message (FATAL_ERROR "FLTK required but not found")
-endif (FLTK_FOUND)
-mark_as_advanced (FLTK_DIR)
-mark_as_advanced (FLTK_FLUID_EXECUTABLE)
-mark_as_advanced (FLTK_MATH_LIBRARY)
+if (BuildWithFLTK)
+    find_package (FLTK REQUIRED)
+    if (FLTK_FOUND)
+        message (STATUS "Found FLTK")
+    else (FLTK_FOUND)
+        message (FATAL_ERROR "FLTK required but not found")
+    endif (FLTK_FOUND)
+    mark_as_advanced (FLTK_DIR)
+    mark_as_advanced (FLTK_FLUID_EXECUTABLE)
+    mark_as_advanced (FLTK_MATH_LIBRARY)
+endif(BuildWithFLTK)
 
 
 # libncurses / libcursesw
@@ -299,7 +306,9 @@ else(READLINE_FOUND)
     message( FATAL_ERROR "Readline library not found! Please install development components (libreadline-dev)" )
 endif(READLINE_FOUND)
 
-set (YOSHI_INCLUDES ${FLTK_INCLUDE_DIR})
+if (BuildWithFLTK)
+    set (YOSHI_INCLUDES ${FLTK_INCLUDE_DIR})
+endif (BuildWithFLTK)
 
 # set platform specific compiler flags
 if (BuildFor0ld_X86)
@@ -362,8 +371,12 @@ set (Interface_Sources
     Interface/InterChange.cpp
     Interface/MidiLearn.cpp
     Interface/MidiDecode.cpp
-    UI/MiscGui.cpp
 )
+#if (BuildWithFLTK)
+#    set (Interface_Sources
+#        {Interface_Sources} {UI/MiscGui.cpp}
+#    )
+#endif (BuildWithFLTK)
 
 set (Params_sources
     Params/ADnoteParameters.cpp  Params/EnvelopeParams.cpp
@@ -383,39 +396,42 @@ set (MusicIO_sources
     MusicIO/AlsaEngine.cpp
 )
 
-set (FltkUI_names
-    "PresetsUI" "EnvelopeUI"
-    "LFOUI" "FilterUI" "VirKeyboardUI"
-    "ConfigUI" "SUBnoteUI" "ResonanceUI"
-    "OscilGenUI" "ADnoteUI" "PADnoteUI"
-    "EffUI" "BankUI" "PartUI"
-    "MicrotonalUI" "MasterUI" "MasterMiscUI"
-    "ParametersUI" "ConsoleUI" "VectorUI"
-    "MidiLearnUI"
-)
+if (BuildWithFLTK)
+    set (FltkUI_names
+        "PresetsUI" "EnvelopeUI"
+        "LFOUI" "FilterUI" "VirKeyboardUI"
+        "ConfigUI" "SUBnoteUI" "ResonanceUI"
+        "OscilGenUI" "ADnoteUI" "PADnoteUI"
+        "EffUI" "BankUI" "PartUI"
+        "MicrotonalUI" "MasterUI" "MasterMiscUI"
+        "ParametersUI" "ConsoleUI" "VectorUI"
+        "MidiLearnUI"
+    )
 
 # workaround fltk_wrap_ui breakage
-set (FltkUI_sources)
-set (FltkUI_headers)
-foreach(basename ${FltkUI_names})
-    set (fluidfile "${CMAKE_CURRENT_SOURCE_DIR}/UI/${basename}.fl")
-    set (sourcefile "${basename}.cpp")
-    set (headerfile "${basename}.h")
-    add_custom_command(
-        OUTPUT ${sourcefile}
-        COMMAND ${FLTK_FLUID_EXECUTABLE} ARGS -c -o .cpp ${fluidfile}
-        DEPENDS ${fluidfile}
-    )
-    set (FltkUI_sources ${FltkUI_sources} "${sourcefile}")
-    set (FltkUI_headers ${FltkUI_headers} "${headerfile}")
-endforeach(basename ${FltkUI_names})
+    set (FltkUI_sources)
+    set (FltkUI_headers)
+    foreach(basename ${FltkUI_names})
+        set (fluidfile "${CMAKE_CURRENT_SOURCE_DIR}/UI/${basename}.fl")
+        set (sourcefile "${basename}.cpp")
+        set (headerfile "${basename}.h")
+        add_custom_command(
+            OUTPUT ${sourcefile}
+            COMMAND ${FLTK_FLUID_EXECUTABLE} ARGS -c -o .cpp ${fluidfile}
+            DEPENDS ${fluidfile}
+        )
+        set (FltkUI_sources ${FltkUI_sources} "${sourcefile}")
+        set (FltkUI_headers ${FltkUI_headers} "${headerfile}")
+    endforeach(basename ${FltkUI_names})
 
-set (FltkUI_sources
-    ${FltkUI_sources}
-    UI/DynamicTooltip.cpp
-    UI/WidgetPDial.cpp
-    UI/WidgetMWSlider.cpp
-)
+    set (FltkUI_sources
+        ${FltkUI_sources}
+        UI/DynamicTooltip.cpp
+        UI/WidgetPDial.cpp
+        UI/WidgetMWSlider.cpp
+        UI/MiscGui.cpp
+    )
+endif(BuildWithFLTK)
 
 add_definitions (
     -D'YOSHIMI_VERSION="${YOSHIMI_VERSION}"'
@@ -474,7 +490,6 @@ set (ProgSources
     ${DSP_sources}
     ${Effects_sources}
     ${MusicIO_sources}
-    ${FltkUI_sources}
 )
 
 include_directories (AFTER
@@ -490,7 +505,6 @@ include_directories (AFTER
 
 set(ExternLibraries
     ${FONTCONFIG_LIBRARIES}
-    ${FLTK_LIBRARIES}
     ${MXML_LIBRARIES}
     ${ALSA_LIBRARIES}
     ${JACK_LIBRARIES}
@@ -503,6 +517,14 @@ set(ExternLibraries
     #dl
     ${LIBDL_LINUX}
 )
+if (BuildWithFLTK)
+    set(ProgSources
+        ${ProgSources} ${FltkUI_sources}
+    )
+    set(ExternLibraries
+        ${ExternLibraries} ${FLTK_LIBRARIES}
+    )
+endif (BuildWithFLTK)
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
     link_directories(/usr/local/lib)
@@ -603,6 +625,9 @@ add_custom_target (distclean
 
 
 if (LV2Plugin)
+    if (NOT BuildWithFLTK)
+        message(FATAL_ERROR "Can't build LV2 headless")
+    endif()
     if (EXISTS $ENV{LV2_PATH})
         set(LV2_INSTALL_DIR $ENV{LV2_PATH} CACHE PATH
         "Specifies where the LV2 libraries should be installed")
