--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,11 +36,11 @@ add_definitions(-Wall)
 
 # vvv
 #add_definitions(-Wpedantic)
-##add_definitions(-Werror=format-security)
-##add_definitions(-Wextra)
+add_definitions(-Werror=format-security)
+add_definitions(-Wextra)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "1.5.10.2")
+set (YOSHIMI_VERSION "1.5.10 M")
 add_definitions (-DMIN_CONFIG_MAJOR=1)
 add_definitions (-DMIN_CONFIG_MINOR=5)
 
