Added nore warning/error traps to CMakeLists Removed some switch case dropthroughs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,8 @@ add_definitions(-std=gnu++11) # various versions of cmake
 add_definitions(-Wall)
 
 # vvv
+#add_definitions(-Werror)
+add_definitions(-Wfatal-errors)
 #add_definitions(-Wpedantic)
 add_definitions(-Werror=format-security)
 add_definitions(-Wextra)
