Moved hidden filenames fro globals to main Moved instance start out of loop Added extra message when loading manual Edited docs Set release as 1.5.11

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,7 +42,7 @@ add_definitions(-Wall)
 #add_definitions(-Wextra)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "1.5.11 rc4")
+set (YOSHIMI_VERSION "1.5.11")
 add_definitions (-DMIN_CONFIG_MAJOR=1)
 add_definitions (-DMIN_CONFIG_MINOR=5)
 
