Moved static lists from CmdInterface.h to TextLists.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -373,6 +373,7 @@ set (Interface_Sources
     Interface/MidiDecode.cpp
     Interface/FileMgr.cpp
     Interface/RingBuffer.cpp
+    Interface/TextLists.h
 )
 
 set (Params_sources
