Refactoring: eliminate the MiscFuncs baseclass
...and split those functions into three header only function libraries

- NumericFuncs.h
- FormatFuncs.h
- CliFuncs.h

Then remove all the includes from the headers,
and instead include only the required part into the CPP files.
And finally add an explicit using clause for each actually used function.

As a follow-up, remove various unneded includes, remove using namespace std

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -360,7 +360,7 @@ set (Effects_sources
 
 set (Misc_sources
     Misc/Config.cpp  Misc/SynthEngine.cpp  Misc/Bank.cpp  Misc/Splash.cpp
-    Misc/Microtonal.cpp   Misc/Part.cpp  Misc/XMLwrapper.cpp  Misc/MiscFuncs.cpp   Misc/WavFile.cpp
+    Misc/Microtonal.cpp   Misc/Part.cpp  Misc/XMLwrapper.cpp  Misc/WavFile.cpp
 )
 
 set (Interface_Sources
@@ -376,7 +376,7 @@ set (Interface_Sources
 set (CLI_Sources
     CLI/CmdInterface.cpp
     #CLI/ConfigCLI.cpp
-    CLI/MiscCLI.cpp
+    CLI/CmdInterpreter.cpp
 )
 
 set (Params_sources
