Added shortcut and ellipsis to GUI Instruments/Search entry Improved CLI instrument group comments Added error check for CLI bank/root CC selection Set version as 1.6.0 rc1 * Set and updated manual version * Updated docs and metadata

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,10 +41,10 @@ add_definitions(-Wextra)
 add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "1.5.11 M")
+set (YOSHIMI_VERSION "1.6.0 rc1")
 
 add_definitions (-DMIN_CONFIG_MAJOR=1)
-add_definitions (-DMIN_CONFIG_MINOR=5)
+add_definitions (-DMIN_CONFIG_MINOR=6)
 
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
