Fix broken detection of -I flags for FFTW3F
FFTW3F is found through pkg-config, and CMake's FindPkgConfig always
sets *_INCLUDE_DIRS, not *_INC_DIR.

This shouldn't actually affect anyone unless their copy of FFTW3F is
installed in a non-standard location.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -422,7 +422,7 @@ include_directories (AFTER
     ${JACK_INCLUDE_DIRS}
     ${FONTCONFIG_INCLUDE_DIRS}
     ${FLTK_INCLUDE_DIR}
-    ${FFTW3F_INC_DIR}
+    ${FFTW3F_INCLUDE_DIRS}
     ${LIBCAIRO_INCLUDE_DIRS}
     ${Readline_INCLUDE_DIR}
     ${ZLIB_INCLUDE_DIRS}
