Replaced ringbuffer with improved code from Rainer Added small adjustment to MiscGui.cpp Removed Ringbuffer.cpp stub and adjusted cmake files Adjusted copyright notices

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -294,7 +294,7 @@ set (Interface_Sources
     Interface/Data2Text.cpp
     Interface/MidiLearn.cpp
     Interface/MidiDecode.cpp
-    Interface/RingBuffer.cpp
+    Interface/RingBuffer.h
     Interface/TextLists.h
 )
 
