Started separating startup options from Config.cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -285,8 +285,9 @@ set (Effects_sources
 )
 
 set (Misc_sources
-    Misc/Config.cpp  Misc/SynthEngine.cpp  Misc/Bank.cpp  Misc/Splash.cpp
-    Misc/Microtonal.cpp   Misc/Part.cpp  Misc/XMLwrapper.cpp  Misc/WavFile.cpp
+    Misc/CmdOptions.cpp  Misc/Config.cpp  Misc/SynthEngine.cpp  Misc/Bank.cpp
+    Misc/Splash.cpp  Misc/Microtonal.cpp   Misc/Part.cpp  Misc/XMLwrapper.cpp
+    Misc/WavFile.cpp
 )
 
 set (Interface_Sources
