[FFT-storage] Introduce policy for locking into FFTwrapper
The creation of FFTW3 calculation plans is not thread safe.
See http://fftw.org/fftw3_doc/Thread-safety.html

This changeset introduces a configurable policy
 - to control locking when a new plan is defined
 - to control locking on access to the plan for actual calculations.

Note: most usages now use the Typedef "FFTcalc", which represents usage
of libFFTW3 without any locking (thus most code is effectively not altered)

--- a/src/LV2_Plugin/CMakeLists.txt
+++ b/src/LV2_Plugin/CMakeLists.txt
@@ -23,8 +23,8 @@ file (GLOB yoshimi_lv2_plugin_files
         lv2extui.h
         lv2extprg.h)
 file (GLOB yoshimi_dsp_files
-    ../DSP/FFTwrapper.cpp  ../DSP/AnalogFilter.cpp  ../DSP/FormantFilter.cpp
-    ../DSP/SVFilter.cpp  ../DSP/Filter.cpp  ../DSP/Unison.cpp
+    ../DSP/AnalogFilter.cpp  ../DSP/Filter.cpp  ../DSP/FormantFilter.cpp
+    ../DSP/SVFilter.cpp  ../DSP/Unison.cpp
     ../DSP/FFTwrapper.h  ../DSP/AnalogFilter.h  ../DSP/FormantFilter.h
     ../DSP/SVFilter.h  ../DSP/Filter.h  ../DSP/Unison.h)
 file (GLOB yoshimi_effects_files
