[padthread] send status update messages towards the GUI
This changeset introduces a new kind of command messages,
which are sent as status notifications. These status messages
emanate from within the processing in Synth and from the background threads.

Since the existing infrastructure in Interchange::mediate() is not really prepared
to handle such messages, for the time being, we sent them directly into the queue
interchange.toGUI

PADStatus can be used as a receiver component for such messages;
it will filter the messages by the part and kit-item number, and thus
only status updates for the currently displayed PADSynth kititem will be indicated.

The actual UI manipulation can be bound into PADStatus as lambda functions,
to switch the UI label and colour of the "Apply"-button dynamically, in response
to relevant state changes from PADSynth wavetable building:

DIRTY    = "Apply Changes" | red     | parameter changes necessitate a wavetable rebuild
BUILDING = "rebuilding..." | magenta | background build underway
PENDING  = "pending Wave"  | lt blue | a new wavetable is ready to be picked up
FADING   = "fading..."     | yellow  | only while currently sounding note does an X-Fade
CLEAN    = "Rebuild Wave"  | gray    | default / idle state

Moreover we now print some status messages to the Log (for people using only the CLI)

--- a/src/LV2_Plugin/CMakeLists.txt
+++ b/src/LV2_Plugin/CMakeLists.txt
@@ -59,7 +59,8 @@ file (GLOB yoshimi_params_files
     ../Params/Controller.cpp  ../Params/Presets.cpp ../Params/PresetsStore.cpp
     ../Params/ADnoteParameters.h  ../Params/EnvelopeParams.h
     ../Params/FilterParams.h  ../Params/LFOParams.h
-    ../Params/SUBnoteParameters.h  ../Params/PADnoteParameters.h
+    ../Params/SUBnoteParameters.h
+    ../Params/PADnoteParameters.h ../Params/PADStatus.h
     ../Params/OscilParameters.cpp ../Params/OscilParameters.h
     ../Params/Controller.h  ../Params/Presets.h ../Params/PresetsStore.h)
 file (GLOB yoshimi_synth_files
