[padthread] New Feature -- auto-retrigger and random walk
By means of this "padthread" refactoring, we now have the ability to build wavetables
as background task, and we can change the wavetable for currently sounding notes with a
smooth and non-obstrusive cross-fade.

Basically PADSynth is a granualr synth, yet the actual sound patterning is not truely random,
but rather repetitive, due to the implementation technique used (build a spectrum with widened lines
and generate a wavetable by fast inverse Fourier Transform). However, with this new feature, PADSynth
can now re-trigger itself and thus renew the wavetable from time to time, thereby breaking the
subtle "same-ness" and producing a truely random sound patterning.

Additionally, we can perform a "random walk" on some relevant parameters on each wavetable rebuild.

 * Add new parameters and allocate appropriate control numbers

   xFadeUpdate   = 20
   rebuildTrigger = 90
   randWalkDetune  = 91
   randWalkBandwidth = 92
   randWalkFilterFreq = 93
   randWalkProfileWidth = 94
   randWalkProfileStretch = 95

 * hook these new parameters into command system and persist them within the Instrument XML

 * build a new UI for activating this feature and controlling the random walk

   - accessible through a small button in the main PADSynth window, next to the crossfade-dial
   - provide a child window with
     + a dial for the retrigger time: 0=off, 100ms up to 60sec
     + 5 further dials to control the random walk spread

 * hook new functionality into PADSynth, at the point where the availability
   of new wavetables is checked and possibly a cross-fade is initiated.

   - thus now a "sample time" counter is incremented on each block of sample data produced
   - when reaching the rebuildTrigger time, a new background build is launched
   - while performing the random walk on relevant parameters if desired

 * fine tuning of the feature

   - the random walk spread dials use a non-linear scale,
     to focus on f

--- a/src/LV2_Plugin/CMakeLists.txt
+++ b/src/LV2_Plugin/CMakeLists.txt
@@ -60,7 +60,7 @@ file (GLOB yoshimi_params_files
     ../Params/ADnoteParameters.h  ../Params/EnvelopeParams.h
     ../Params/FilterParams.h  ../Params/LFOParams.h
     ../Params/SUBnoteParameters.h
-    ../Params/PADnoteParameters.h ../Params/PADStatus.h
+    ../Params/PADnoteParameters.h ../Params/PADStatus.h ../Params/RandomWalk.h
     ../Params/OscilParameters.cpp ../Params/OscilParameters.h
     ../Params/Controller.h  ../Params/Presets.h ../Params/PresetsStore.h)
 file (GLOB yoshimi_synth_files
