Reverted Resonance undo speedup test as it was messing up some graph shapes, especially when most of the region hadn't been altered. The execution speed difference was pretty marginal anyway.
Made a few further small changes to the user guide.

Initial preparations for the release of V 2.2.0. Currently marked as
2.2.0 rc0 - a sort of quasi-rc that we can hold indefintely.
README is not filled in as github always publishes them immediately
(sourceforge doesn't - leaves it to you).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,7 @@ add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 add_definitions(-Wno-deprecated)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "2.1.2 M")
+set (YOSHIMI_VERSION "2.2.0 rc0")
 
 add_definitions (-DMIN_CONFIG_MAJOR=2)
 add_definitions (-DMIN_CONFIG_MINOR=0)
