Changed cmake policy CMP0072 from OLD to NEW. We don't actually use opeGL, but this suppresses a cmake warning.
Added a tooltip to Edit button.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,7 +25,7 @@ if (POLICY CMP0046)
     cmake_policy (SET CMP0046 NEW)
 endif () # opengl version
 if (POLICY CMP0072)
-    cmake_policy (SET CMP0072 OLD)
+    cmake_policy (SET CMP0072 NEW)
 endif ()
 
 #set(CMAKE_CXX_COMPILER "clang++")
